# wechat-reader

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
examples/openclaw/: README.md  openclaw_wechat_bridge.py
tests/: test_browser_bridge.py  test_cli.py  test_formatters.py  test_mcp_server.py  test_openclaw.py  test_openclaw_tool.py  test_parser.py
wechat_reader/: __init__.py  browser_bridge.py  cli.py  formatters.py  mcp_server.py  models.py  openclaw_tool.py  setup.py  wechat_parser.py
wechat_reader/integrations/: __init__.py  openclaw.py
