[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mp-article-bridge"
version = "0.1.0"
description = "Local browser bridge for agents to read WeChat articles."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "wangjiaying" }
]
dependencies = [
  "playwright>=1.50.0"
]

[project.scripts]
mp-article-bridge = "wechat_reader.cli:main"
mp-article-bridge-openclaw = "wechat_reader.openclaw_tool:main"

[tool.setuptools.packages.find]
include = ["wechat_reader*"]
