[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-reader"
version = "0.1.0"
description = "CLI, MCP server, and Python API for reading WeChat articles from a verified browser session."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "wangjiaying" }
]
dependencies = [
  "playwright>=1.50.0"
]

[project.scripts]
wechat-reader = "wechat_reader.cli:main"
wechat-reader-openclaw = "wechat_reader.openclaw_tool:main"
wechat-reader-mcp = "wechat_reader.mcp_server:main"

[tool.setuptools.packages.find]
include = ["wechat_reader*"]
