[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-reader"
version = "0.1.0"
description = "面向 AI Agent 的微信公众号文章阅读工具，提供 CLI、MCP server 和 Python API。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
  "wechat",
  "wechat-reader",
  "wechat-article",
  "mcp",
  "model-context-protocol",
  "playwright",
  "ai-agent",
  "browser-automation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [
  { name = "xiguawang" }
]
dependencies = [
  "playwright>=1.50.0"
]

[project.urls]
Homepage = "https://github.com/xiguawang/wechat-reader"
Repository = "https://github.com/xiguawang/wechat-reader"
Issues = "https://github.com/xiguawang/wechat-reader/issues"
Documentation = "https://github.com/xiguawang/wechat-reader#readme"

[project.scripts]
wechat-reader = "wechat_reader.cli:main"
wechat-reader-openclaw = "wechat_reader.openclaw_tool:main"
wechat-reader-mcp = "wechat_reader.mcp_server:main"

[tool.setuptools.packages.find]
include = ["wechat_reader*"]
